fix contrast constant
see https://www.w3.org/WAI/WCAG21/errata/

--- a/sass/contrast.scss
+++ b/sass/contrast.scss
@@ -26,7 +26,7 @@ $planifolia-contrast-light-default: white !default;
 
 @function _srgb($channel) {
   $x: math.div($channel, 255);
-  @if $x <= 0.03928 {
+  @if $x <= 0.04045 {
     @return math.div($x, 12.92);
   } @else {
     $c: math.div($x + 0.055, 1.055);
